syntax = "proto3";
package eventmessages;
option go_package = "eventmessages";
option java_package = "com.factom.factomd.eventmessages";

import "google/protobuf/timestamp.proto";
import "eventmessages/sharedTypes.proto";
import "eventmessages/adminBlock.proto";
import "eventmessages/factoidBlock.proto";

// ====  ROOT EVENT =====
message FactomEvent {
    EventSource eventSource = 1;
    string factomNodeName = 2;
    Hash identityChainID = 3;
    oneof value {
        ChainCommit chainCommit = 4;
        EntryCommit entryCommit = 5;
        EntryReveal entryReveal = 6;
        StateChange stateChange = 7;
        DirectoryBlockCommit directoryBlockCommit = 8;
        ProcessMessage processMessage = 9;
        NodeMessage nodeMessage = 10;
    }
}

// ====  FACTOM EVENT VALUES =====
message ChainCommit {
    EntityState entityState = 1;
    Hash chainIDHash = 2;
    Hash entryHash = 3;
    Hash weld = 4;
    google.protobuf.Timestamp timestamp = 5;
    uint32 credits = 6;
    bytes entryCreditPublicKey = 7;
    bytes signature = 8;
    uint32 version = 9;
}


message EntryCommit {
    EntityState entityState = 1;
    Hash entryHash = 2;
    google.protobuf.Timestamp timestamp = 3;
    uint32 credits = 4;
    bytes entryCreditPublicKey = 5;
    bytes signature = 6;
    uint32 version = 7;
}


message EntryReveal {
    EntityState entityState = 1;
    EntryBlockEntry entry = 2;
    google.protobuf.Timestamp timestamp = 3;
}


message StateChange {
    Hash entityHash = 1;
    EntityState entityState = 2;
    uint32 blockHeight = 3;
}


message DirectoryBlockCommit {
    DirectoryBlock directoryBlock = 1;
    AdminBlock adminBlock = 2;
    FactoidBlock factoidBlock = 3;
    EntryCreditBlock entryCreditBlock = 4;
    repeated EntryBlock entryBlocks = 5;
    repeated EntryBlockEntry entryBlockEntries = 6;
}

// ====  DIRECTORY BLOCK DETAILS =====
message DirectoryBlock {
    DirectoryBlockHeader header = 1;
    repeated DirectoryBlockEntry entries = 2;
}

message DirectoryBlockHeader {
    Hash bodyMerkleRoot = 1;
    Hash previousKeyMerkleRoot = 2;
    Hash previousFullHash = 3;
    google.protobuf.Timestamp timestamp = 4;
    uint32 blockHeight = 5;
    uint32 blockCount = 6;
    uint32 version = 7;
    uint32 networkID = 8;
}

message DirectoryBlockEntry {
    Hash chainID = 1;
    Hash keyMerkleRoot = 2;
}

message EntryBlock {
    EntryBlockHeader header = 1;
    repeated Hash entryHashes = 2;
}

message EntryBlockHeader {
    Hash bodyMerkleRoot = 1;
    Hash chainID = 2;
    Hash previousFullHash = 3;
    Hash previousKeyMerkleRoot = 4;
    uint32 blockHeight = 5;
    uint32 blockSequence = 6;
    uint32 entryCount = 7;
}

message EntryBlockEntry {
    Hash hash = 1;
    repeated ExternalId externalIDs = 2;
    Content content = 3;
    uint32 version = 4;
}

message EntryCreditBlock {
    EntryCreditBlockHeader header = 1;
    repeated EntryCreditBlockEntry entries = 2;
}

message EntryCreditBlockHeader {
    Hash bodyHash = 1;
    Hash previousHeaderHash = 2;
    Hash previousFullHash = 3;
    uint32 blockHeight = 4;
    bytes headerExpansionArea = 5;
    uint64 objectCount = 6;
    uint64 bodySize = 7;
}

message EntryCreditBlockEntry {
    oneof value {
        ChainCommit chainCommit = 1;
        EntryCommit entryCommit = 2;
        IncreaseBalance increaseBalance = 3;
        MinuteNumber minuteNumber = 4;
        ServerIndexNumber serverIndexNumber = 5;
    }
}

message IncreaseBalance {
    bytes entryCreditPublicKey = 1;
    Hash transactionID = 2;
    uint64 index = 3;
    uint64 amount = 4;
}

message MinuteNumber {
    uint32 minuteNumber = 1;
}

message ServerIndexNumber {
    uint32 serverIndexNumber = 1;
}

// ====  MESSAGE EVENTS =====
message ProcessMessage {
    ProcessCode processCode = 1;
    Level level = 2;
    string messageText = 3;
}


message NodeMessage {
    NodeMessageCode messageCode = 1;
    Level level = 2;
    string messageText = 3;
}

// ====  ENUMS =====
enum EventSource {
    LIVE = 0;
    REPLAY_BOOT = 1;
}

enum EntityState {
    REQUESTED = 0;
    ACCEPTED = 1;
    REJECTED = 2;
    COMMITTED_TO_DIRECTORY_BLOCK = 3;
}

enum Level {
    INFO = 0;
    WARNING = 1;
    ERROR = 2;
}

enum ProcessCode {
    NEW_BLOCK = 0;
    NEW_MINUTE = 1;
}

enum NodeMessageCode {
    GENERAL = 0;
    STARTED = 1;
    SYNCED = 2;
    SHUTDOWN = 3;
}
